# Coin-Flipper

./: CNAME  index.html  package-lock.json  package.json  vite.config.ts
assets/: index-DnD5dN5J.js  index-tD-gGBPU.css
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
